# semantic-similarity-rating

./: README.md  app.py  pyproject.toml  quick_start.py  requirements.txt  run_app.sh  run_app_public.sh
semantic_similarity_rating/: compute.py  response_rater.py
validation/: README.md  compare_results.py  opinionqa_human_reference.csv  opinionqa_personas.xlsx  opinionqa_questions.xlsx  prepare_opinionqa_files.py
